[project]
name = "medsam-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentationsx>=2.0.12",
    "gdown>=5.2.0",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pycocotools>=2.0.10",
    "pydantic>=2.12.0",
    "segment-anything>=1.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.209",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
